# AHIN

./: .env.example  .env.production.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  deploy_ahin_cloudflare.sh  docker-compose.yml  index.html  next.config.mjs  package-lock.json  package.json  requirements-dev.txt  requirements.txt  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  wrangler.toml  wrangler.toml.example  wrangler.workers.devnet.jsonc  wrangler.workers.jsonc  wrangler.workers.p3a.jsonc
.github/workflows/: ahin-cloudflare-preview.yml  ahin-cloudflare-root-production.yml  ahin-production-gate.yml
ahin-gateway/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
ahin-gateway/app/: globals.css  layout.tsx  page.tsx
ahin-gateway/components/: AhinGateway.tsx
ahin-gateway/lib/: hexHash.ts  milestoneActions.ts
app/: globals.css  layout.tsx  page.tsx
app/active-hash/: page.tsx
apps/control_plane_api/: main.py
apps/edge_terminal/: __init__.py  audit_log.py  cognitive_interaction_handler.py  context.py  main.py
apps/settlement_worker/: main.py
backup_archive/: chippmf_legacy_20260513T154337Z.manifest  chippmf_legacy_20260513T154337Z.sha256
config/: default.toml  dry_run.toml  paper.toml
contracts/: AhinGatekeeper.sol
crates/backtest/: Cargo.toml
crates/backtest/src/: event_loader.rs  event_replay.rs  fee_sim.rs  funding_sim.rs  lib.rs  pnl_simulator.rs  report.rs  simulated_fill.rs  slippage_sim.rs  v11_hedge.rs
crates/backtest/tests/: red_team.rs
crates/canary_engine/: Cargo.toml
crates/canary_engine/src/: lib.rs  live_micro.rs  readiness.rs  release_audit.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: backtest_replay_cli.rs  features_snapshot_cli.rs
crates/cost_engine/: Cargo.toml
crates/domain/: Cargo.toml
crates/domain/src/: config.rs  errors.rs  lib.rs  money.rs  time.rs  types.rs
crates/exchange/: Cargo.toml
crates/exchange/src/: adapter.rs  binance_readonly.rs  deribit_readonly.rs  lib.rs  mock_exchange.rs  okx_readonly.rs
crates/execution_engine/: Cargo.toml
crates/execution_engine/src/: candidate_decision.rs  candidate_sizing.rs  dry_run_candidate.rs  dry_run_router.rs  lib.rs  order_candidate.rs  order_reconcile.rs  reduce_only.rs
crates/feature_engine/: Cargo.toml
crates/iching_engine/: Cargo.toml
crates/market_data/: Cargo.toml
crates/paper_engine/: Cargo.toml
crates/paper_engine/src/: lib.rs  paper_fill.rs  paper_loop.rs  paper_report.rs  paper_soak.rs  paper_state.rs  report_compare.rs  soak_report.rs
crates/risk_engine/: Cargo.toml
crates/signal_engine/: Cargo.toml
crates/state_engine/: Cargo.toml
crates/state_engine/src/: engine_state.rs  lib.rs  persistence.rs  recovery.rs
crates/withdrawal_engine/: Cargo.toml
data/replay/: sample_events.jsonl
docs/deployment/: ahin-blocking-standard.md  ahin-cloudflare-ci-preview-deploy.md  ahin-cloudflare-production.md  ahin-phase3b-safe-preview-deploy.md  ahin-production-deploy.md  p3a-mainnet-readonly-rpc.md  p3a-rpc-provider-migration.md  p3a-run-operator-runbook.md
docs/governance/: ahin-foundation-genesis-multisig.md
docs/phase5a/: legal-compliance-checklist.md  mainnet-dry-run-readiness-certificate.md  micro-transfer-cap-policy.md  multisig-approval-checklist.md  post-transfer-replay-attestation-template.md  rollback-plan.md  wallet-allowlist-policy.md
kernel/ahin-trust-kernel/: Cargo.toml  README.md
kernel/ahin-trust-kernel/src/: lib.rs
reports/: ahin-ci-production-gate.json  ahin-foundation-genesis-multisig-attestation.json  ahin-lifeplus-admission-policy.json  ahin-p2p-audit-accepted-risk.json  ahin-p2p-production-canary-readiness.json  ahin-p2p-release-lint-reconciliation.json  ahin-p2p-runtime-audit-raw.json  ahin-p2p-runtime-audit-triage.json  ahin-p2p-signed-audit-policy-gate.json  ahin-p3a-balance-read-diagnostics.json  ahin-p3a-mainnet-readonly-live-ui-run.json  ahin-p3a-mainnet-readonly-live-ui-run.template.json  ahin-p3a-mainnet-readonly-live-ui-test.json  ahin-p3a-mainnet-rpc-readiness.json  ahin-p3a-rpc-provider-migration.template.json  ahin-phase3a-deployment-ownership-recovery.json  ahin-phase3b-preview-deployment-attestation.json  ahin-phase4-cloudflare-deployment-attestation.json  ahin-phase4-oracle-preview-readiness.json  ahin-phase4c-ci-deploy-path.json  ahin-phase4c-ci-preview-deploy-2.json  ahin-phase4c-ci-preview-deploy-final-verification.json  ahin-phase4c-ci-preview-gates-2.json  ahin-phase4c-ci-preview-gates.json  ahin-phase4c-oracle-default-outputmint-fix.json  ahin-phase4c-repo-binding.json  ahin-phase4c-toolchain-isolation.json  ahin-phase4c-toolchain-recovery.json  ahin-phase4f-agent-matrix-redesign.json  ahin-phase4f-snapshot-visual-acceptance.json  ahin-phase5a-mainnet-dry-run-readiness.json  ahin-production-deployment-attestation.json  ahin-production-release.json  ahin-r0-g1-production-language-readiness.json  ahin-r0-g1-root-governance-console-ui.json  ahin-r0-g1-root-governance-gate-readiness.json  ahin-r0-g1-root-governance-gate-ui-polish.json  ahin-r0-g2-main-merge-readiness.json  ahin-r0-g2-trusted-twin-court-readiness.json  ahin-r0-g3-production-terminal-governance-console.json  (+6 more)
scripts/: ahin-ci-production-gate-report.mjs  ahin-cloudflare-attestation.mjs  ahin-cloudflare-pages-deploy.mjs  ahin-cloudflare-preflight.mjs  ahin-deployment-attestation.mjs  ahin-oracle-preview-readiness-report.mjs  ahin-preview-deployment-attestation.mjs  assert_no_agent_gatekeepers.sh  backup_and_restructure_chippmf.sh  check-runtime-audit-policy.mjs  clean-agent-logo-edges.mjs  deploy-final.mjs  deploy-foundation-squad-esm.js  deploy-foundation-squad.cjs  deploy-foundation-squad.ts  deploy_ahin_cloudflare.sh  p3a-rpc-readonly-smoke.sh  rehearse-usage-fee.ts  release-lint.mjs  sample_workflow.py  test-payment-canary.mts  test-pocc.mts  test-solana-transfer-instructions.mts  test-wallet-ux.mts
src/: App.tsx  index.css  main.tsx
tests/: test_canxian_pipeline.py  test_core.py  test_edge_terminal.py  test_value_flow.py
(+241 files in other folders)
