[package]
name = "canary_engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
backtest = { path = "../backtest" }
domain = { path = "../domain" }
rust_decimal.workspace = true
serde_json.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
