[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
backtest = { path = "../backtest" }
canary_engine = { path = "../canary_engine" }
clap.workspace = true
cost_engine = { path = "../cost_engine" }
domain = { path = "../domain" }
exchange = { path = "../exchange" }
execution_engine = { path = "../execution_engine" }
feature_engine = { path = "../feature_engine" }
paper_engine = { path = "../paper_engine" }
risk_engine = { path = "../risk_engine" }
signal_engine = { path = "../signal_engine" }
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde_json.workspace = true
state_engine = { path = "../state_engine" }
tokio.workspace = true

[dev-dependencies]
wiremock.workspace = true
