[package]
name = "exchange"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
domain = { path = "../domain" }
rust_decimal.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
tokio.workspace = true

