[package]
name = "paper_engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
domain = { path = "../domain" }
execution_engine = { path = "../execution_engine" }
iching_engine = { path = "../iching_engine" }
risk_engine = { path = "../risk_engine" }
rust_decimal.workspace = true
serde_json.workspace = true
signal_engine = { path = "../signal_engine" }

[dev-dependencies]
rust_decimal_macros.workspace = true
